footer fix on mobile

--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -1,64 +1,73 @@
 .footer {
-    max-width: 760px;
-    width: 100%;
-    /* height: 100px; */
-    display: flex;
-    flex-direction: column;
-    margin: 0 auto;
-    padding: 0 0.5rem;
+  max-width: 760px;
+  width: 100%;
+  /* height: 100px; */
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  padding: 0 0.5rem;
+
+}
+
+.caps {
+  text-transform: uppercase;
+  letter-spacing: 0.09em;
+}
+
+.footer p,
+.footer a {
+  color: #F5FFFA;
+  font-size: 0.9em;
+  font-weight: 300;
+  line-height: 1.6;
+  letter-spacing: 0.05em;
+  opacity: 0.8;
+  margin: 0;
+}
+
+.footer_icons {
+  margin: 10px 0 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.footer_icons__social a {
+  background: none;
+  margin: 0 8px;
+  opacity: 0.8;
+}
+
+.footer_icons__rewind img {
+  margin: auto;
+  vertical-align: bottom;
+  display: inline-block;
+  margin-right: 0.15em;
+}
+
+.footer_icons__rewind a {
+  background: var(--axe);
+  font-style: normal;
+  line-height: 20px;
+  margin: 0;
+}
+
+.footer a:first-child {
+  margin-left: 0;
+}
+
+.footer a:hover {
+  opacity: 1;
+  background-image: none;
+}
+
+
+
+@media (max-width: 500px) {
+
+  .footer {
+    padding: 0 0.5rem 1em;
 
   }
-  
-  .caps {
-    text-transform: uppercase;
-    letter-spacing: 0.09em;
-  }
-  
-  .footer p, .footer a {
-    color: #F5FFFA;
-    font-size: 0.9em;
-    font-weight: 300;
-    line-height: 1.6;
-    letter-spacing: 0.05em;
-    opacity: 0.8;
-    margin: 0;
-  }
-  
-  .footer_icons {
-    margin: 10px 0 0;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-  }
-  
-  .footer_icons__social a {
-    background: none;
-    margin: 0 8px;
-    opacity: 0.8;
-  }
 
-  .footer_icons__rewind img {
-    margin: auto;
-    vertical-align: bottom; 
-    display: inline-block;
-    margin-right: 0.15em;
-  }
-  
-  .footer_icons__rewind a {
-    background: var(--axe);
-    font-style: normal;
-    line-height: 20px;
-    margin: 0;
-  }
-  
-  .footer a:first-child {
-    margin-left: 0;
-  }
-  
-  .footer a:hover {
-    opacity: 1;
-    background-image: none;
-  }
-  
-  
-  
+}
